Add Add-Opens manifest entry for Java 9.